--- a/src/app/iam/iam.component.html
+++ b/src/app/iam/iam.component.html
@@ -8,10 +8,10 @@
 
             <div class="iam-text-container">
                 <div>
-                    <span class="iam-text">I am</span>
+                    <div class="right-space"><span class="iam-text">I am</span></div>
                     <div><span class="name-text">Cristina Jordi</span></div>
                     <div><span class="FD-text">FRONTEND DEVELOPER</span></div>
-                    <button>Let's Talk!</button>
+                    <button class="btn-lets-talk">Let's Talk!</button>
                 </div>
 
             </div>
