--- a/src/app/myskills/my-skills.component.html
+++ b/src/app/myskills/my-skills.component.html
@@ -24,7 +24,7 @@
                 <div class="button-center"> <button class="another-btn">Get in Touch!</button></div>
 
                 <div class="vektor-container-my-skills">
-                    <div><img src="../../assets/img/my_skills/vector_1_red.png"></div>
+                    <div><img class="vektor-my-skills" src="../../assets/img/my_skills/vector_1_red.png"></div>
                 </div>
             </div>
         </div>
