--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,7 @@
     src: url('../src/assets/fonts/Poppins-Black.ttf') format('truetype');
 }
 
-$bg-color: #141D2F;
+$bg-color: rgb(20, 29, 47);
 
 * {
     margin: 0;
