--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -125,3 +125,33 @@ $red: #FF4747;
     width: 200px;
     height: 600px;
 }
+
+
+@media (max-width: 950px) {
+
+    .about-me-container-flex {
+        margin-top: -130px;
+
+        .about-me-container {
+            width: 100%;
+            padding-right: 10%;
+
+            p {
+                font-size: max(12px, 1.9vw); // ca. 16px
+                line-height: 22px;
+            }
+        }
+    }
+
+    .background-red {
+        z-index: -1;
+    }
+
+    .round-portrait-container {
+        display: none;
+    }
+
+    .vektor-container {
+        display: none;
+    }
+}
