--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,11 +6,35 @@
         <div class="qr-code">
             <!-- <img src="../../assets/img/QR.png" alt="Open page on mobile device"> -->
         </div>
-        <div class="nav-container">
+        <div class="navi-container">
             <a href="#about-me">About Me <span>|</span></a>
             <a href="#my-skills">My Skills <span>|</span></a>
             <a href="#portfolio">Portfolio <span>|</span></a>
 
         </div>
     </div>
+
+    <!-- Start Mobile Navigation -->
+    <div class="offcanvas-menu">
+        <input type="checkbox" id="toogle-menu" />
+
+        <label for="toogle-menu" class="toogle-open"><span></span></label>
+
+        <nav>
+            <div>
+                <a href="#"> <i class="fab fa-css3-alt"></i>offcanvas </a>
+                <label for="toogle-menu" class="toogle-close">
+                    <span></span>
+                </label>
+            </div>
+            <ul>
+                <li><a href="#section1">Section </a></li>
+                <li><a href="#section2">Section </a></li>
+                <li><a href="#section3">Section </a></li>
+                <li><a href="#section4">Section </a></li>
+                <li><a href="#section5">Section </a></li>
+            </ul>
+        </nav>
+    </div>
+    <!-- End Mobile Navigation -->
 </section>
