--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -5,86 +5,354 @@
 
 // Begin Header Section
 
-.header-container {
-    padding-left: 10%;
-    padding-right: 10%;
-    position: fixed;
-    top: 0;
-    padding-top: 30px;
-    width: 80%;
-    height: 60px;
-    background-color: #141D2F;
-    z-index: 50;
-    // border: 1px solid white;
-}
+@media (min-width: 615px) {
 
-.qr-code {
-    position: absolute;
-    top: 10px;
-    right: 56%;
-
-    img {
-        width: 50px;
-        object-fit: cover;
-    }
-}
-
-.name-container {
-    font-family: 'Allison Script', sans-serif;
-    position: absolute;
-    margin-top: -15px;
-
-    span a{
-        font-size: 2rem;
-        color: rgb(221, 114, 15);
-        cursor: pointer;
-        text-decoration: none;
-    }
-}
-
-.nav-container {
-    float: right;
-    position: absolute right;
-    font-size: 0.8rem;
-    // border: 1px solid green;
-
-    span {
-        color: rgb(221, 114, 15);
+    .offcanvas-menu {
+        display: none;
     }
 
-    a {
-        margin-left: 12px;
-        color: white;
-        text-decoration: none;
-        position: relative;
+    .header-container {
+        padding-left: 10%;
+        padding-right: 10%;
+        position: fixed;
+        top: 0;
+        padding-top: 30px;
+        width: 80%;
+        height: 60px;
+        background-color: #141D2F;
+        z-index: 50;
+        // border: 1px solid white;
+    }
 
-        &:hover {
+    .qr-code {
+        position: absolute;
+        top: 10px;
+        right: 56%;
+
+        img {
+            width: 50px;
+            object-fit: cover;
+        }
+    }
+
+    .name-container {
+        font-family: 'Allison Script', sans-serif;
+        position: absolute;
+
+        span a {
+            font-size: 2rem;
             color: rgb(221, 114, 15);
+            cursor: pointer;
+            text-decoration: none;
+        }
+    }
 
-            span {
-                color: rgba(221, 114, 15, 0)
+    .navi-container {
+        float: right;
+        position: absolute right;
+        font-size: 0.8rem;
+
+        span {
+            color: rgb(221, 114, 15);
+        }
+
+        a {
+            margin-left: 12px;
+            color: white;
+            text-decoration: none;
+            position: relative;
+
+            &:hover {
+                color: rgb(221, 114, 15);
+
+                span {
+                    color: rgba(221, 114, 15, 0)
+                }
             }
-        }
 
-        &::after {
-            content: '';
-            position: absolute;
-            left: 0;
-            bottom: -2px;
-            width: 100%;
-            height: 1px;
-            background-color: rgb(221, 114, 15);
-            transform: scaleX(0);
-            transform-origin: left;
-            transition: transform 0.5s ease-in-out;
-            
-        }
+            &::after {
+                content: '';
+                position: absolute;
+                left: 0;
+                bottom: -2px;
+                width: 100%;
+                height: 1px;
+                background-color: rgb(221, 114, 15);
+                transform: scaleX(0);
+                transform-origin: left;
+                transition: transform 0.5s ease-in-out;
+            }
 
-        &:hover::after {
-            transform: scaleX(1);
-            width: 90%;
+            &:hover::after {
+                transform: scaleX(1);
+                width: 90%;
+            }
         }
     }
 }
 
 // End Header Section
+
+
+// Start Mobile Navigation
+
+@media (max-width: 615px) {
+
+    .navi-container {
+        display: none;
+    }
+
+    .header-container {
+        padding-left: 10%;
+        width: 100%;
+        position: fixed;
+        top: 0;
+        padding-top: 30px;
+        height: 60px;
+        background-color: #141D2F;
+        z-index: 50;
+        // border: 1px solid white;
+
+        .name-container {
+            font-family: 'Allison Script', sans-serif;
+            position: absolute;
+
+            span a {
+                font-size: max(30px, 6vw);
+                color: rgb(221, 114, 15);
+                cursor: pointer;
+                text-decoration: none;
+            }
+        }
+    }
+
+
+
+    * {
+        margin: 0;
+        padding: 0;
+    }
+
+    html {
+        scroll-behavior: smooth;
+    }
+
+    body {
+        font-size: 23px;
+        font-family: 'Poppins', sans-serif;
+        font-weight: 400;
+        color: white;
+        background: #16161a;
+        color: #f3f3f3;
+    }
+
+    a {
+        text-decoration: none;
+        outline: none;
+        color: darken($color: #fff, $amount: 80);
+    }
+
+    li {
+        list-style: none;
+    }
+
+    @keyframes hover {
+        50% {
+            transform: translateX(10px);
+        }
+    }
+
+    .offcanvas-menu {
+        >label {
+            top: 11px;
+            right: 30px;
+            position: fixed;
+            width: 40px;
+            height: 40px;
+            cursor: pointer;
+            transition: 0.3s ease;
+            display: flex;
+            align-items: center;
+            z-index: 999;
+        }
+
+        label {
+
+            span,
+            span::before,
+            span::after {
+                transition: background 0.3s, transform 0.3s;
+            }
+
+            span,
+            span::before,
+            span::after {
+                content: "";
+                position: absolute;
+                height: 2px;
+                width: 35px;
+                background-color: white;
+            }
+
+            span::before {
+                transform: translateY(-12px);
+            }
+
+            span::after {
+                transform: translateY(12px);
+            }
+        }
+
+        nav {
+            position: fixed;
+            top: -26px;
+            height: 100vh;
+            width: 100%;
+            right: -100%;
+            overflow: hidden;
+            background-color: rgba(20, 29, 47, 0.8);
+            transition: 0.3s ease;
+            z-index: 999;
+
+            >div {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+
+                a {
+                    font-size: 2.5rem;
+                    font-weight: 500;
+                    display: flex;
+                    align-items: center;
+                    font-family: "Monoton", cursive;
+                    -webkit-text-fill-color: transparent;
+
+                    i {
+                        font-size: 4rem;
+                        background: linear-gradient(120deg, #49a4ed 30%, #3d00a9 110%);
+                        -webkit-text-fill-color: transparent;
+                    }
+                }
+
+                label {
+                    width: 30px;
+                    height: 30px;
+                    display: flex !important;
+                    align-items: center;
+                    justify-content: center;
+                    cursor: pointer;
+                    transition: 0.3s ease;
+                    margin-top: 42px;
+                    margin-right: 38px;
+
+                    span,
+                    span:before,
+                    span:after {
+                        background-color: white;
+                    }
+                }
+            }
+
+            >ul {
+                margin-top: 30px;
+                counter-reset: nav-link-count;
+                align-items: center;
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+
+                li {
+                    cursor: pointer;
+                    padding: 10px 0;
+                    transform: translateX(-30px);
+                    opacity: 0;
+                    transition: 0.4s ease;
+                    counter-increment: nav-link-count;
+
+                    a {
+                        font-size: 23px;
+                        line-height: 27px;
+                        font-weight: 400;
+                        color: white;
+                        display: block;
+
+                        &::after {
+                            content: " : " counter(nav-link-count);
+                        }
+                    }
+
+                    &:hover {
+                        animation: hover 0.5s;
+                    }
+                }
+            }
+        }
+
+        input[type="checkbox"] {
+            display: none;
+
+            &:checked {
+                ~label {
+                    opacity: 0;
+                    pointer-events: none;
+                }
+
+                ~nav {
+                    right: 0;
+                }
+
+                ~nav label span {
+                    background: transparent;
+                }
+
+                ~nav label span:before {
+                    transform: rotate(-45deg);
+                }
+
+                ~nav label span:after {
+                    transform: rotate(45deg);
+                }
+
+                ~nav label span:before,
+                ~nav label span:after {
+                    transition-delay: 0.2s;
+                }
+
+                ~nav ul li {
+                    opacity: 1;
+                    transform: translateX(0px);
+                }
+
+                ~nav ul li:nth-child(1) {
+                    transition-delay: 0.1s;
+                }
+
+                ~nav ul li:nth-child(2) {
+                    transition-delay: 0.2s;
+                }
+
+                ~nav ul li:nth-child(3) {
+                    transition-delay: 0.3s;
+                }
+
+                ~nav ul li:nth-child(4) {
+                    transition-delay: 0.4s;
+                }
+
+                ~nav ul li:nth-child(5) {
+                    transition-delay: 0.5s;
+                }
+
+                ~nav ul li:nth-child(6) {
+                    transition-delay: 0.6s;
+                }
+
+                ~nav ul li:nth-child(7) {
+                    transition-delay: 0.7s;
+                }
+            }
+        }
+    }
+}
+
+// End Mobile Navigation
