Added imprint page

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -14,8 +14,7 @@
                 <h3>Got a problem to solve?</h3><br><br>
                 <p class="text">
                     Contact me through this form, I am interested in hearing you, knowing your ideas and contributing to
-                    your
-                    projects with my work.<br><br>
+                    your projects with my work.<br><br>
                     Need a Frontend developer? <b>Contact me!</b>
                 </p>
 
