--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -7,13 +7,18 @@
             </div>
 
             <div class="copyright_container">
-             <p>© Cristina Jordi 2023</p>
+                <p>© Cristina Jordi 2023</p>
             </div>
 
             <div class="social_media_container">
                 <img class="transition" src="../../assets/img/references Icons_line/Github button.png">
                 <img class="transition" src="../../assets/img/references Icons_line/Email button.png">
                 <img class="transition" src="../../assets/img/references Icons_line/Linkedin button.png">
+            </div>
+
+            <div class="imprint">
+                <a href="#">Imprint</a>
+
             </div>
 
         </div>
