--- a/src/app/iam/iam.component.scss
+++ b/src/app/iam/iam.component.scss
@@ -283,3 +283,19 @@ $red: #FF4747;
         top: 49%;
     }
 }
+
+
+@media (max-width: 690px) {
+
+.social-media-container{
+
+    .mail-name{
+        display: none;
+    }
+}
+
+}
+
+
+
+
