--- a/src/app/myskills/my-skills.component.scss
+++ b/src/app/myskills/my-skills.component.scss
@@ -166,7 +166,7 @@ $red: #FF4747;
             }
 
             p {
-                font-size: max(12px, 1.9vw);
+                font-size: max(12px, 1.9vw); // ca. 16px
                 margin-top: 0;
             }
         }
