--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -14,15 +14,17 @@
         <!-- Start Grid System Portfolio -->
         <div class="grid-container-format">
             <div class="grid-container">
+                <!-- Join Start-->
                 <div class="grid-item" style="text-align: right;">
-                    <img class="image-item right" src="../../assets/img/portfolio/join.png" alt="Canban Project">
+                    <img class="img-right" src="../../assets/img/portfolio/join.png" alt="Kanban Project">
                 </div>
+
+
                 <div class="grid-item">
                     <h3>Join</h3>
                     <p class="title-grid">JavaScript | HTML | CSS | Backend </p>
-                    <p class="text-portfolio">Task manager inspired by the Canban System. Create and <br> organize tasks
-                        using drag and
-                        drop functions, assign users and <br> categories. </p>
+                    <p class="text-portfolio">Task manager inspired by the Kanban System. Create and organize
+                        tasks using drag and drop functions, assign users and categories. </p>
                     <div class="btn-right-portfolio">
                         <button class="btn-bg-left">Live test</button>
                         <button class="btn-bg-right">Github</button>
@@ -30,53 +32,146 @@
                     <div class="background-red-portfolio"></div>
                     <div class="background-orange-portfolio"></div>
                 </div>
+                <!-- Join End-->
+
+                <!-- El Pollo Loco Start-->
                 <div class="grid-item" style="text-align: right;">
                     <h3>El Pollo Loco</h3>
                     <p class="title-grid">JavaScript | HTML | CSS | Backend </p>
-                    <p class="text-portfolio">A simple Jump-and-Run game based on an object-oriented <br>
-                        approach. Help Pepe Peligroso to find coins and poisoned salsa <br> bottles
+                    <p class="text-portfolio">A simple Jump-and-Run game based on an object-oriented
+                        approach. Help Pepe Peligroso to find coins and poisoned salsa bottles
                         to fight against the killer chickens. </p>
                     <div class="btn-left-portfolio">
                         <button class="btn-bg-left">Live test</button>
                         <button class="btn-bg-right">Github</button>
                     </div>
+                </div>
 
-                </div>
+
                 <div class="grid-item" style="text-align: left;">
-                    <img src="../../assets/img/portfolio/pollo_loco.png" alt="El Pollo Loco">
+                    <img class="img-left" src="../../assets/img/portfolio/pollo_loco.png" alt="El Pollo Loco">
                 </div>
-                <div class="grid-item" style="text-align: right;">
-                    <img class="right" src="../../assets/img/portfolio/pokedex.png" alt="Pokédex">
+                <!-- El Pollo Loco End-->
+
+                <!-- Pokedex Start-->
+                <div class="grid-image">
+                    <div class="grid-item" style="text-align: right;">
+                        <img class="img-right" src="../../assets/img/portfolio/pokedex.png" alt="Pokédex">
+                    </div>
                 </div>
+
                 <div class="grid-item">
                     <h3>Pokédex</h3>
                     <p class="title-grid">JavaScript | HTML | CSS | API </p>
-                    <p class="text-portfolio">Based on the PokéAPI a simple library that provides and <br> catalogues
-                        pokemon information. </p>
+                    <p class="text-portfolio">Based on the PokéAPI a simple library that provides and
+                        catalogues pokemon information. </p>
                     <div class="btn-right-portfolio">
                         <button class="btn-bg-left">Live test</button>
                         <button class="btn-bg-right">Github</button>
                     </div>
                 </div>
+                <!-- Pokedex End-->
+
+                <!-- Ring of Fire Start-->
                 <div class="grid-item" style="text-align: right;">
                     <h3>Ring of Fire</h3>
                     <p class="title-grid">Angular | TypeScript | Firebase | Material Design </p>
-                    <p class="text-portfolio">Ring Of Fire is an interactive drinking game app using Angular, <br>
-                        Firebase,
-                        and Material Design. It provides a fun way to play with <br> friends and family real time while
-                        enjoying a few drinks. </p>
+                    <p class="text-portfolio">Ring Of Fire is an interactive drinking game app using Angular,
+                        Firebase, and Material Design. It provides a fun way to play with friends and family real time
+                        while enjoying a few drinks. </p>
                     <div class="btn-left-portfolio">
                         <button class="btn-bg-left">Live test</button>
                         <button class="btn-bg-right">Github</button>
                     </div>
                 </div>
-                <div class="grid-item" style="text-align: left;">
-                    <img src="../../assets/img/portfolio/ringoffire.png" alt="Ring of Fire">
-                </div>
-            </div>
 
+
+                <div class="grid-item" style="text-align: left;">
+                    <img class="img-left" src="../../assets/img/portfolio/ringoffire.png" alt="Ring of Fire">
+                </div>
+                <!-- Ring of Fire End-->
+            </div>
         </div>
         <!-- End Grid System Portfolio -->
+
+        <!-- Start Mobile Sensitive Portfolio -->
+        <div class="mobile-container-portfolio">
+            <!-- Join Start-->
+            <div class="portfolio-img">
+                <img src="../../assets/img/portfolio/join.png" alt="Kanban Project">
+            </div>
+
+            <div class="portfolio-text">
+                <h3>Join</h3>
+                <p class="title-portfolio">JavaScript | HTML | CSS | Backend </p>
+                <p class="text-portfolio">Task manager inspired by the Kanban System. Create and organize
+                    tasks using drag and drop functions, assign users and categories. </p>
+                <div class="btn-portfolio">
+                    <button class="btn-live-test">Live test</button>
+                    <button class="btn-github">Github</button>
+                </div>
+                <div class="background-red-portfolio"></div>
+                <div class="background-orange-portfolio"></div>
+            </div>
+            <!-- Join End-->
+
+            <!-- El Pollo Loco Start-->
+            <div class="portfolio-img">
+                <img src="../../assets/img/portfolio/pollo_loco.png" alt="El Pollo Loco">
+            </div>
+            <div class="portfolio-text">
+                <h3>El Pollo Loco</h3>
+                <p class="title-portfolio">JavaScript | HTML | CSS | Backend </p>
+                <p class="text-portfolio">A simple Jump-and-Run game based on an object-oriented
+                    approach. Help Pepe Peligroso to find coins and poisoned salsa bottles
+                    to fight against the killer chickens. </p>
+                <div class="btn-portfolio">
+                    <button class="btn-live-test">Live test</button>
+                    <button class="btn-github">Github</button>
+                </div>
+            </div>
+            <!-- El Pollo Loco End-->
+
+            <!-- Pokedex Start-->
+            <div class="portfolio-img">
+                <img src="../../assets/img/portfolio/pokedex.png" alt="Pokédex">
+            </div>
+
+            <div class="portfolio-text">
+                <h3>Pokédex</h3>
+                <p class="title-portfolio">JavaScript | HTML | CSS | API </p>
+                <p class="text-portfolio">Based on the PokéAPI a simple library that provides and <br>
+                    catalogues
+                    pokemon information. </p>
+                <div class="btn-portfolio">
+                    <button class="btn-live-test">Live test</button>
+                    <button class="btn-github">Github</button>
+                </div>
+            </div>
+            <!-- Pokedex End-->
+
+            <!-- Ring of Fire Start-->
+            <div class="portfolio-img">
+                <img src="../../assets/img/portfolio/ringoffire.png" alt="Ring of Fire">
+            </div>
+            <div class="portfolio-text">
+                <h3>Ring of Fire</h3>
+                <p class="title-portfolio">Angular | TypeScript | Firebase | Material Design </p>
+                <p class="text-portfolio">Ring Of Fire is an interactive drinking game app using Angular, <br>
+                    Firebase,
+                    and Material Design. It provides a fun way to play with <br> friends and family real time
+                    while
+                    enjoying a few drinks. </p>
+                <div class="btn-portfolio">
+                    <button class="btn-live-test">Live test</button>
+                    <button class="btn-github">Github</button>
+                </div>
+            </div>
+            <!-- Ring of Fire End-->
+        </div>
+
+
+        <!-- End Mobile Sensitive Portfolio -->
     </div>
 
 </section>
