--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -15,12 +15,10 @@ $orange: #FA7902;
         justify-content: space-between;
         align-items: center;
         width: 80%;
-        // border: 1px solid white;
 
 
         .name_container {
             font-family: 'Allison Script', sans-serif;
-            // border: 1px solid white;
 
             span a {
                 font-size: 2rem;
@@ -36,14 +34,12 @@ $orange: #FA7902;
             font-family: 'Allison Script', sans-serif;
             font-weight: 400;
             font-size: 23px;
-            // border: 1px solid white;
         }
 
         .social_media_container {
             display: flex;
             justify-content: space-between;
             width: 150px;
-            // border: 1px solid white;
 
             img.transition {
                 height: 30px;
@@ -56,5 +52,79 @@ $orange: #FA7902;
                 }
             }
         }
+
+        .imprint {
+            font-size: 0.8rem;
+                margin-left: 0;
+            
+                span {
+                    color: rgb(221, 114, 15);
+                }
+            
+                a {
+                    color: white;
+                    text-decoration: none;
+                    position: relative;
+            
+                    &:hover {
+                        color: rgb(221, 114, 15);
+            
+                        span {
+                            color: rgba(221, 114, 15, 0)
+                        }
+                    }
+            
+                    &::after {
+                        content: '';
+                        position: absolute;
+                        left: 0;
+                        bottom: -2px;
+                        width: 100%;
+                        height: 1px;
+                        background-color: rgb(221, 114, 15);
+                        transform: scaleX(0);
+                        transform-origin: left;
+                        transition: transform 0.5s ease-in-out;
+                    }
+            
+                    &:hover::after {
+                        transform: scaleX(1);
+                        width: 100%;
+                    }
+                }
+        }
     }
+}
+
+
+@media (max-width: 950px) {
+
+    .footer_container {
+        margin-top: 665px;
+        height: 305px;
+
+        .footer_content_container {
+            display: flex;
+            flex-direction: column;
+            margin-top: 50px;
+            margin-bottom: 50px;
+            height: 200px;
+
+            .name_container {
+                span {
+                    a {
+                        font-size: max(20px, 5.5vw);
+                    }
+                }
+            }
+
+            .copyright_container {
+
+                p {
+                    font-size: max(13px, 1.8vw); // ca. 23px
+                }
+            }
+        }
+    }
+
 }
